--- a/index.html
+++ b/index.html
@@ -209,17 +209,20 @@
       <div class="modal modal-search">
         <button class="modal-close-button">
           <span class="visually-hidden">Закрыть</span>
+          <svg class="close-button-icon" width="15" height="14" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M14.11 1.3 12.82 0l-5.7 5.7L1.4 0 .1 1.3 5.82 7l-5.7 5.7L1.4 14l5.7-5.7 5.71 5.7 1.3-1.3L8.4 7l5.7-5.7Z"/></svg>
         </button>
         <section class="modal-content">
           <h2 class="title modal-search-title">Поиск гостиницы в Седоне</h2>
           <form class="modal-search-form" action="https://echo.htmlacademy.ru/" method="post">
             <p class="field-group date arrival-date">
-              <label class="modal-search-label" for="arrival-date">Дата Заезда: </label>
+              <label class="modal-search-label" for="arrival-date">Дата Заезда:</label>
               <input class="modal-search-field" type="text" id="arrival-date" name="search-arrival-date" placeholder="Укажите дату">
+              <span class="error-text">Мы не можем отправить вас в прошлое.</span>
             </p>
             <p class="field-group date depart-date">
               <label class="modal-search-label" for="depart-date">Дата Выезда:</label>
               <input class="modal-search-field" type="text" id="depart-date" name="search-depart-date" placeholder="Укажите дату">
+              <span class="attention-text">На эти даты есть свободные номера. Пока есть.</span>
             </p>
             <p class="field-group number-of-guests adult-number">
               <label class="modal-search-label" for="adult-number">Взрослые:</label>
